change doctest to submodule

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,4 +9,4 @@ add_executable(test test/test.cpp test/test_lexer.hpp)
 target_include_directories(test PRIVATE include)
 target_include_directories(test PRIVATE lib/TAVL)
 target_include_directories(test PRIVATE lib/static_print)
-target_include_directories(test PRIVATE lib/doctest)
+target_include_directories(test PRIVATE lib/doctest/doctest)
