--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/static_print"]
 	path = lib/static_print
 	url = https://github.com/wxr001/static_print.git
+[submodule "lib/doctest"]
+	path = lib/doctest
+	url = https://github.com/onqtam/doctest.git
